--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,39 +1,55 @@
-name: Déploiement vers Vercel
+name: CI/CD Pipeline avec Tests
 
-# Condition de déclenchement
 on:
   push:
     branches:
-      - main # Déclenchement sur la branche principale (main)
+      - main
 
 jobs:
-  deploy:
+  # Premier job: Exécution des tests
+  test:
     runs-on: ubuntu-latest
 
-    # Etapes
     steps:
-    # 1. Checkout du code source
-    - name: Checkout du code
-      uses: actions/checkout@v3
+      - name: Checkout du code
+        uses: actions/checkout@v3
 
-    # 2. Installation de Node.js et des dépendances
-    - name: Installation de Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '22' # Remplacez par la version Node.js utilisée par votre projet
-        cache: 'npm'
+      - name: Installation de Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '22'
+          cache: 'npm'
 
-    - name: Installation des dépendances
-      run: npm install
+      - name: Installation des dépendances
+        run: npm install
 
-    # 3. Construire l'application React
-    - name: Build de l'application
-      run: npm run build
+      - name: Exécution des tests
+        run: npm test
 
-    # 4. Déployer sur Vercel
-    - name: Déploiement
-      env:
-        VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-      run: |
-        npm install -g vercel
-        vercel --prod --token $VERCEL_TOKEN --yes
+  # Deuxième job: Déploiement (exécuté uniquement si les tests passent)
+  deploy:
+    needs: test
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout du code
+        uses: actions/checkout@v3
+
+      - name: Installation de Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '22'
+          cache: 'npm'
+
+      - name: Installation des dépendances
+        run: npm install
+
+      - name: Build de l'application
+        run: npm run build
+
+      - name: Déploiement sur Vercel
+        env:
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+        run: |
+          npm install -g vercel
+          vercel --prod --token $VERCEL_TOKEN --yes
